# inventory-sales-tracker

./: .gitignore  Cargo.toml  build.rs  db.db
migrations/: 20240411182320_initial.sql  20240802191413_reps.sql  20240803023150_shipping_and_status.sql  20240803030405_rep_cut.sql  20240811213557_add_on_delete.sql  20240811214520_add_more_on_delete.sql  20240812030822_add_on_delete_sales_manu.sql
phg.app/Contents/: Info.plist
phg.app/Contents/Resources/: icon.icns
src/: clients.rs  components.rs  error.rs  home.rs  main.rs  manufacture.rs  parts.rs  product.rs  purchase.rs  rep.rs  sales.rs
