[package]
name = "phg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["image", "svg"] }
iced_futures = { version = "0.12", features = ["tokio"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio" ] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"
clipboard = "0.5.0"
regex = "1.10.5"
